Fix: Selector icon added to each book

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@ button:active {
 }
 
 .book-shelf-changer {
-  position: absolute;
+  /*position: absolute;*/
   right: 0;
   bottom: -10px;
   width: 40px;
