--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ body, .app {
 
 .search-books-input-wrapper {
   flex: 1;
-  background: #e9e;
+  background: rgb(230, 227, 230);
 }
 
 .search-books-bar input {
